fix pre overflow scrolling

--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -2,9 +2,9 @@
 
 
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro);
-pre { background-color: #2E2D29; font-family: 'Source Code Pro', "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace;}
-pre code { background-color: #2E2D29; border: none; overflow-x: auto; white-space: pre; }
-pre a, pre a:hover {text-decoration: none; background-color: #2E2D29; color: #a6e22e;}
+pre { background-color: #2E2D29; overflow-x: auto; font-family: 'Source Code Pro', "Lucida Console", "Lucida Sans Typewriter", Monaco, "Bitstream Vera Sans Mono", monospace;}
+pre code { background-color: #2E2D29; border: none; white-space: pre; }
+pre a, pre a:hover { text-decoration: none; background-color: #2E2D29; color: #a6e22e; }
 pre a .kw { color: #f92672; font-weight: bold; } /* Keyword */
 pre a .co { color: #75715e; } /* Comment */
 pre a .at { color: #a6e22e; } /* Error */
@@ -15,8 +15,6 @@ pre a .dt { color: #fd971f; } /* DataType */
 pre a .bu { color: #66d9ef; } /* BuiltIn */
 pre a .cf { color: #f92672; } /* ControlFlow */
 pre a .va { color: #ae81ff } /* Variable */
-
-
 
 pre .numberSource {
     margin-left: 3em;
